--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -43,12 +43,15 @@
   "devDependencies": {
     "@tencent/hippy-pack": "latest",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
+    "react-test-renderer": "^16.11.0",
+    "jest-html-reporter": "^2.8.2",
     "babel-eslint": "^10.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "eslint": "^5.2.0",
