--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
     "eslint-config-prettier": "^6.6.0",
     "eslint-config-xo": "^0.27.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "fs-extra": "^8.1.0",
     "husky": "^3.0.9",
     "jest": "^24.8.0",
     "lint-staged": "^9.4.3",
     "prettier": "^1.19.1",
-    "shelljs": "^0.8.3",
     "yeoman-assert": "^3.1.0",
     "yeoman-test": "^1.7.0"
   },
@@ -37,7 +35,9 @@
   "dependencies": {
     "chalk": "^2.1.0",
     "yeoman-generator": "^2.0.1",
-    "yosay": "^2.0.1"
+    "yosay": "^2.0.1",
+    "fs-extra": "^8.1.0",
+    "shelljs": "^0.8.3"
   },
   "jest": {
     "testEnvironment": "node"
